# creepy

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
creepy/: __init__.py  __main__.py  app.py  copy.py  load_private_key.py  memory.py  serialization.py  serialization.py.orig
creepy/_detail/: private_key.py  private_numbers.py
creepy/cli/: __init__.py
creepy/crypto/: __init__.py  common.py  handshake.py  session.py  wrappers.py
creepy/io/: __init__.py  json.py
creepy/pipe/: __init__.py  app.py  common.py  connect.py
creepy/protocol/: __init__.py  asymmetric.py  common.py  constants.py  handshake.py  session.py
creepy/protocol/tests/: test_asymmetric.py
creepy/query/: __init__.py  pickle.py  proxy.py
creepy/subprocess/: __init__.py  app.py  common.py  instance.py  pypen.py
creepy/subprocess/_detail/: proxy.py
creepy/subprocess/tests/: test_instance.py  test_pypen.py
creepy/tests/: test_serialization.py
creepy/types/: secure_string.py
creepy/types/tests/: find_secret.py  test_secure_string.py
creepy/utils/: __init__.py  libc.py  memory.py  processify.py
creepy/utils/tests/: test_processify.py
docker/: Dockerfile  build.sh  daemon.sh  run.sh  start.sh
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  creepy.cli.rst  creepy.io.rst  creepy.protocol.rst  creepy.protocol.tests.rst  creepy.query.rst  creepy.rst  creepy.subprocess.rst  creepy.types.rst  creepy.utils.rst  index.rst  modules.rst  readme_link.md
examples/: copy.py  cp.py  hello_world.py  pipe_client.py  pipe_server.py  pypen_child.py  pypen_parent.py  send.py
reepyc/: node.py
reepyc/crypto/: wrappers.py
reepyc/query/: __init__.py
src/creepy/: app.py  copy.py  serialization.py
src/creepy/_detail/: private_key.py  private_numbers.py
src/creepy/io/: __init__.py  json.py  txt.py
src/creepy/protocol/: asymmetric.py  common.py  (+1 more)
(+16 files in other folders)
