[flake8]
max-line-length = 120
max-complexity = 10
ignore = E731,E228,E225,E226,E704

[isort]
line_length = 120
no_lines_before = LOCALFOLDER
lines_after_imports = 2
length_sort_straight = True

[metadata]
name = creepy
license_files = LICENSE.txt

[options]
zip_safe = False
install_requires =
    cryptography[ssh] >=39.0.0, <=41.0.7  # 42.0.0 breaks serialization of RSAPrivateNumbers
    starlette
    requests
packages = find:
package_dir =
    = src

[options.extras_require]
tests =
    pytest
    psutil

[options.entry_points]
console_scripts =
    creepy = creepy.cli:app
