[flake8]
max-line-length = 120
max-complexity = 10
ignore = E731,E228,E225,E226,E704,W504,D100,D102,D105,D301
per-file-ignores = __init__.py:F401
docstring-convention = numpy

[isort]
line_length = 120
no_lines_before = LOCALFOLDER
lines_after_imports = 2
length_sort_straight = True

[metadata]
name = creepy
license_files = LICENSE.txt

[options]
zip_safe = False
install_requires =
    cryptography[ssh] >=39.0.0
    starlette
    requests
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    isort
    flake8
    flake8-docstrings
test =
    pytest
    psutil

[options.entry_points]
console_scripts =
    creepy = creepy.cli:app
